--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "camelcase": "^8.0.0",
     "camelcase-keys": "^9.1.3",
     "express": "^4.21.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pug": "^3.0.3"
   }
 }
