--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "serve-favicon": "^2.5.0"
   }
 }
