--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "camelcase": "^8.0.0",
     "camelcase-keys": "^9.1.3",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "mongoose": "^8.9.5",
