--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "camelcase": "^8.0.0",
     "camelcase-keys": "^9.1.3",
     "cookie-parser": "^1.4.7",
